@@ -1,3 +1,4 @@
+* Allow going back to processing state
 * Add aggregated information on Payment groups
 
 Version 5.6.0 - 2020-05-04
